--- a/src/pages/CheckIn/index.scss
+++ b/src/pages/CheckIn/index.scss
@@ -1,7 +1,6 @@
 .checkIn-container {
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
-  z-index: 999;
   background: var(--bgColor);
   width: 100%;
   .checkIn-first {
