--- a/src/pages/Wallet/index.scss
+++ b/src/pages/Wallet/index.scss
@@ -10,7 +10,7 @@
       font-size: 18px;
       background: var(--btnBg);
       color: #000;
-      padding: 4px 12px;
+      padding: 4px 8px;
       border-radius: 6px;
       display: flex;
       align-items: center;
